--- a/thesis/phase1.tex
+++ b/thesis/phase1.tex
@@ -214,7 +214,7 @@ consists of black cells in column 4.
     \label{fig:invariant}
 \end{figure}
 
-When every block sequence corresponding to the elements of $Q$ has been placed, $a$ elements has been transformed. For all purposes of this proof this is equivalent to being at the start of the sequence corresponding to $q_{a+1}$, even though strictly speaking no such element is given. Thus $i = a+1$ and from the invariants we obtain:
+When every block sequence corresponding to the elements of $Q$ has been placed, $a$ elements has been transformed. For all purposes of this proof this is equivalent to being at the start of the sequence corresponding to element $q_{a+1}$, even though strictly speaking no such element is given. Thus we can assume $i = a+1$ and from the invariants we obtain:
 
 \begin{enumerate}
 \item Still holds.
