--- a/thesis/phase2.tex
+++ b/thesis/phase2.tex
@@ -1,8 +1,8 @@
 \subsubsection{Phase 2}
 \label{subsub:phasetwo}
-In this phase a single $\mathbf{X}_H$ block is generated. From the invariants presented in~\ref{subsub:phaseone} we know that the top of the two wells must be in one of the two states presented in~\autoref{fig:openclosed}. Thus the only non-losing option is to place the $\mathbf{X}_H$ block in such a way that it closes one of the wells permanently. This placement does not clear any cells.
+In this phase a single $\mathbf{X}_H$ block is generated. From the invariants presented in~\ref{subsub:phaseone} we know that the top of the two wells must be in one of the two states presented in~\autoref{fig:openclosed}. Thus the only non-losing option is to place the $\mathbf{X}_H$ block in such a way that it blocks the well. This placement does not clear any cells.
 
-Note that if any well was permanently closed before this phase, this placement renders both of the wells permanently closed, making it impossible to clear any more cells during the game.
+Note that if any well was blocked before this phase, this placement renders both of the wells blocked, making it impossible to clear any more cells during the game.
 
 \begin{figure}[H]
     \centering
