problem statement fix

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -129,11 +129,11 @@ The version of Lumines found in the actual video games is played on a $10 \times
 In Lumines all playable blocks are generated probabilistically. In this report feature will be refered to as \textit{online}. In contrast, a game of Lumines where all playable blocks are known beforehand will be referred to as \textit{offline}.
 
 \subsection{Problem statement}
-This report considers the generalized version of the game, which is played on an $n \times m$-gameboard. The authors seek to formalize and simplify Lumines, and explore this new system's computational complexity characteristics. Certain goals of the game are considered by translating them into decision problems in this system.
+This report considers the generalized version of the game, which is played on an $n \times m$-gameboard. The authors seek to formalize and simplify Lumines, and explore this new system's computational complexity characteristics. The maximization of cleared cells is the main goal which is translated into a decision problem. 
 
 While the sweep-line is a core characteristic of Lumines, this report considers all marked terrain as instantly cleared. Furthermore the report will consider the offline version of the game. These are the two main simplifications, although a more thorough discussion is provided in \nameref{method}. The impact of these simplifications on the validity of the results is considered in \nameref{discussion}.
 
-The main Lumines goals this paper examines are:
+The main Lumines goal this paper examines are:
 \begin{itemize}
         \item Is (standard mode) Lumines NP-complete?
 \end{itemize}
