--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -141,3 +141,7 @@ The main Lumines goal this paper examines are:
 \subsection{Motivation}
 
 Lumines is a game of interest because to the authors' knowledge it's not well researched from the perspective of computational complexity. Several similar games has been more thoroughly researched in recent years and comparing Lumines to these findings might yield interesting results. New findings on the computational complexity of Lumines may aid in the development of video game artificial intelligence. Our understanding of computational complexity in generic 2-dimensional grid games may also benefit from this research. Combining results from this report with results from previous similar research might make it possible to find a correlation between certain game characteristics and classes of computational complexity.
+
+\subsection{Technical Overview}
+
+This report presents some results that to the authors' knowledge has not been presented so far. Lumines computational complexity has not been established and this report gives solid indications that it is NP-complete. Furthermore the authors' has not seen the subset sum problem used much in reductions when considering the complexity of video games.
