--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -20,7 +20,7 @@ The video game Lumines was released in December 2004 in Japan for the PSP platfo
     \label{fig:pieces}
 \end{figure}
 
-Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dichromatic \textit{blocks} falls, and the user rotates and shifts the block before its bottom \text{cells} reaches other cells, \textit{terrain}, in the gameboard. When the block reach existing terrain, it is no longer possible to shift or rotate the block. If both bottom cells of the block is supported by existing terrain, the block stays put on that terrain. Otherwise, the half of the block that is not supported by terrain will fall down until it is. The player is then presented with the next block.
+Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dichromatic \textit{blocks} fall The player rotates and shifts each block before its bottom \text{cells} reaches other cells, \textit{terrain}, in the gameboard. When the block reach existing terrain, it is no longer possible to shift or rotate it. If both bottom cells of the block is supported by existing terrain, the block stays put on that terrain. Otherwise, the half of the block that is not supported by terrain will fall down until it is. The player is then presented with the next block.
 
 \begin{figure}[H]
     \centering
@@ -126,21 +126,21 @@ If at any point the player forms a monochromatic $2 \times 2$ square, all cells 
 The version of Lumines found in the actual video games is played on a $10 \times 16$-gameboard. The goal of the standard game mode in Lumines is to survive, to keep placing blocks inside the gameboard, for as long as possible and clear as much terrain as possible in the process. The blocks given to the player is generated randomly, and 3-block lookahead is provided. The game starts on a partially filled gameboard, which varies in size depending on the difficulty level \cite{lumines}.
 
 \subsection{Online and offline Lumines}
-In Lumines all playable blocks are generated probabilistically. In this report feature will be refered to as \textit{online}. In contrast, a game of Lumines where all playable blocks are known beforehand will be referred to as \textit{offline}.
+In Lumines all playable blocks are generated probabilistically. In this report this feature will be refered to as \textit{online}. In contrast, a game of Lumines where all playable blocks are known beforehand will be referred to as \textit{offline}.
 
 \subsection{Problem statement}
-This report considers the generalized version of the game, which is played on an $n \times m$-gameboard. The authors seek to formalize and simplify Lumines, and explore this new system's computational complexity characteristics. The maximization of cleared cells is the main goal which is translated into a decision problem. 
+This report considers the generalized version of the game, which is played on an $n \times m$-gameboard. The authors seek to formalize and simplify Lumines, and explore this new system's computational complexity characteristics. The maximization of cleared cells is the main goal this paper examines and is translated into a decision problem ``Can k cells be cleared?''. 
 
 While the sweep-line is a core characteristic of Lumines, this report considers all marked terrain as instantly cleared. Furthermore the report will consider the offline version of the game. These are the two main simplifications, although a more thorough discussion is provided in \nameref{method}. The impact of these simplifications on the validity of the results is considered in \nameref{discussion}.
 
-The main Lumines goal this paper examines are:
+The main problem this report intend to answer is:
 \begin{itemize}
         \item Is (standard mode) Lumines NP-complete?
 \end{itemize}
 
 \subsection{Motivation}
 
-Lumines is a game of interest because to the authors' knowledge it's not well researched from the perspective of computational complexity. Several similar games has been more thoroughly researched in recent years and comparing Lumines to these findings might yield interesting results. New findings on the computational complexity of Lumines may aid in the development of video game artificial intelligence. Our understanding of computational complexity in generic 2-dimensional grid games may also benefit from this research. Combining results from this report with results from previous similar research might make it possible to find a correlation between certain game characteristics and classes of computational complexity.
+Lumines is a game of interest because to the authors' knowledge it is not well researched from the perspective of computational complexity. Several similar games has been more thoroughly researched in recent years and comparing Lumines to these findings might yield interesting results. New findings on the computational complexity of Lumines may aid in the development of video game artificial intelligence. Our understanding of computational complexity in generic 2-dimensional grid games may also benefit from this research. Combining results from this report with results from previous similar research might make it possible to find a correlation between certain game characteristics and classes of computational complexity.
 
 \subsection{Technical Overview}
 
