references for nppspace

--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -64,6 +64,14 @@
     year = {2015},
 }
 
+@online{komplexitetsklasser,
+    author = {Viggo Kann},
+    url = {http://www.csc.kth.se/utbildning/kth/kurser/DD1352/adk13/schema/F32.pdf},
+    title = {Komplexitetsklasser},
+    month = april,
+    year = {2015},
+}
+
 @article{minesweeper,
   title={Minesweeper is NP-complete},
   author={Kaye, Richard},
