--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -7,7 +7,7 @@ The two main ways the player can control the Lumines game found on the PSP is to
 
 \subsection{Sweep-line}
 
-In Lumines the sweep-line moves in a constant speed from left to right. The marked squares are cleared when the sweep-line reach the right side of the gameboard. The simplified Lumines instance that is presented in this paper uses an instant sweep-line. This means the blocks are cleared when a new block is fixed which is similar to how rows are cleared in Tetris but not the most true representation of how the sweep-line works in Lumines. There is probably a lot of different ways to make better models of the real sweep-line. For example, we could clear on every $n\text{th}$ block that is fixed to imitate a moving sweep-line where $n$ is an appropriate integer. The instant model was chosen because it was easier to find and prove a reduction in the time given for the project. The amount of cells that can be cleared given a sequence can change dramatically given different models of the sweepline (see \textbf{todo figure showing this}). Therefore in future work we would like to inquire into what impact the sweep-line has on the computational complexity and if there would be any significant results using another model more similar to the real game.
+In Lumines the sweep-line moves in constant speed from left to right. The marked squares are then cleared as the sweep-line scans the cells in their respective marked squares. The simplified Lumines model that is presented in this paper uses an instant sweep-line, in which the cells are marked and cleared simultaneously when a square is formed. This is similar to how rows are cleared in Tetris, but not the most accurate representation of how the sweep-line works in Lumines. There is probably room for improvement in making a more accurate model of the sweep-line game mechanic. For example, every $n\text{th}$ block that is fixed could trigger the clearing of marked cells. The less accurate model in this report was chosen since it was more suitable to work with given the time limit of the project. It is however important to note that the amount of cells that can be cleared in a given sequence can vary dramatically between different models of the sweep-line (see \textbf{todo figure showing this}). Therefore, in future work, inquires into the impact of the chosen sweep-line model on the computational complexity would be a promising area of research.
 
 \subsection{Online Lumines}
 
