subset sum text

--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -15,4 +15,4 @@ In this report the offline version of Lumines has been considered. This is simil
 
 \subsection{Subset sum}
 
-During the research before our reduction was conducted, none of the reductions examined used the subset sum. The most common problem to reduce from seems to be 3-SAT. It is the author's beliefs that this is the first instance concerning video game complexity using the subset sum problem. The nature of NP-completeness permits any NP-complete problem to be used in principle but some problems are inherently easier to reduce than others. The results from this report shows that the subset sum problem is suitable for use when reducing to 2D stacking grid games similar to Lumines. 
+None of the reductions encountered in examined material utilized the subset sum problem. The most commonly found problem to reduce from was the 3-SAT problem. It is the author's beliefs that this is the first paper concerning video game complexity using the subset sum problem. Although the nature of NP-completeness permits all NP-complete problem to be equally valid for use in reductions, some problems are inherently easier to reduce from than others depending on the problem to reduce to. The results from this report shows promising signs that subset sum is suitable problem to reduce from when examining other 2D stacking puzzle games. 
