--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -11,7 +11,7 @@ In Lumines the sweep-line moves in constant speed from left to right. The marked
 
 \subsection{Online Lumines}
 
-In this report the offline version of Lumines has been considered. This is similar to previous studies on Match-three games and Tetris, where offline versions of the respective games have been considered. In these reports the authors argue that if the computational complexity of a property can be shown in the offline version of the games, intuitively it corresponding computational complexity in the online version should be as hard or harder. According to Demaine, Hoffman and Holzer, ``...it is only easier to play Tetris with complete knowledge of the future, so the difficulty of playing the offline version suggests the difficulty of playing the online version'' \cite[p. 2]{tetris}. If this statement is true it is probable that this is also the case for Lumines. However none of the examined papers present any proof that this is the case, either in general or specifically to their respective considered games. Therefore the online version of Lumines should be examined in the future to research if such a proof can be conducted.
+In this report the offline version of Lumines has been considered. This is similar to previous studies on Match-three games and Tetris, where offline versions of the respective games have been considered. In these reports the authors argue that if the computational complexity of a property can be shown in the offline version of the games, intuitively it corresponding computational complexity in the online version should be as hard or harder. According to Demaine, Hoffman and Holzer, ``...it is only easier to play Tetris with complete knowledge of the future, so the difficulty of playing the offline version suggests the difficulty of playing the online version'' \cite[p. 2]{tetris}. If this statement is true it is probable that this is also the case for Lumines. However none of the examined papers present any proof that this is the case, either in the general case or specifically to their respective considered games. Therefore the online version of Lumines should be examined in the future to research if such a proof can be conducted.
 
 \subsection{Subset sum}
 
