--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -3,7 +3,7 @@
 
 \subsection{Rotations}
 
-The two main ways the player can control the Lumines game found on the PSP is to rotate and move the blocks left and right. A simplified model where the player is not allowed to rotate the blocks has been used in the reduction given in this report, meaning an important part of the game is not considered in the proof. It was planned to find a reduction which included rotations but because of time constraints this was not executed and a model without rotations was used instead. Intuitively rotation should have some impact on the hardness of the game. Because of the fact we found it harder to find a proper reduction of the Subset sum when a rotation model was used the possibility that Lumines is actually easier than NP-hard exist. However this does not have to be the case, rotations may as well be harder if it could be proven that an algorithm have to consider all possible ways to build terrain. During this project nothing has been found that tells us how rotations change the complexity and should therefore be examined to get a better understanding of the real game's complexity.
+The two main ways the player can control the blocks in the original Lumines video game is to rotate and move the them left and right. The simplified mode presented in thisis does not consider rotation of the blocks, meaning an important aspect of the game is not considered. It was the original goal of the report to formulate and research a model which included rotations, but time constraints did not permit this. Intuitively rotation should have some impact on the hardness of the game. The authors found it harder to find a reduction from subset sum to a Lumines model where rotations were considered. This suggests the possibility of the model including rotations to be easier than NP-hard. However this does not have to be the case. Rotations may be harder if it could be proven that an algorithm would have to consider all possible ways to build terrain in this model. It is imporant to emphasize that nothing has been found that proofs the impact of rotations on the computational complexity of the model. Therefore this should be examined in future work to get a better understanding of the video game's complexity.
 
 \subsection{Sweep-line}
 
