--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -3,7 +3,7 @@
 
 \subsection{Rotations}
 
-The two main ways the player can control the blocks in the original Lumines video game is to rotate and move the them left and right. The simplified mode presented in thisis does not consider rotation of the blocks, meaning an important aspect of the game is not considered. It was the original goal of the report to formulate and research a model which included rotations, but time constraints did not permit this. Intuitively rotation should have some impact on the hardness of the game. The authors found it harder to find a reduction from subset sum to a Lumines model where rotations were considered. This suggests the possibility of the model including rotations to be easier than NP-hard. However this does not have to be the case. Rotations may be harder if it could be proven that an algorithm would have to consider all possible ways to build terrain in this model. It is imporant to emphasize that nothing has been found that proofs the impact of rotations on the computational complexity of the model. Therefore this should be examined in future work to get a better understanding of the video game's complexity.
+The two main ways the player can control the blocks in the original Lumines video game is to rotate and move them left and right. The simplified mode presented in thisis does not consider rotation of the blocks, meaning an important aspect of the game is not considered. It was the original goal of the report to formulate and research a model which included rotations, but time constraints did not permit this. Intuitively rotation should have some impact on the hardness of the game. The authors found it harder to find a reduction from subset sum to a Lumines model where rotations were considered. This suggests the possibility of the model including rotations to be easier than NP-hard. However this does not have to be the case. Rotations may be harder if it could be proven that an algorithm would have to consider all possible ways to build terrain in this model. It is imporant to emphasize that nothing has been found that proofs the impact of rotations on the computational complexity of the model. Therefore this should be examined in future work to get a better understanding of the video game's complexity.
 
 \subsection{Sweep-line}
 
