--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -52,6 +52,6 @@ The existing research on Lumines largely focus on effective strategies. One pape
 
 The standard Lumines game is played on a $10 \times 16$-gameboard, while standard Tetris is played on a $20 \times 10$-gameboard. In both games, when any block is fixed outside of the gameboard the player loses the game. The player is also given the same kind of control of the pieces i.e. rotating, horizontal movement and dropping the piece.
 
-While in Tetris a completed row is removed instantly, the marked cells in Lumines is not removed until the sweep-line has scanned the area. This creates interesting strategies with timing which does not exist in Tetris. Waiting before dropping a piece in Tetris does not give the player an advantage more than the time to think about what to do next. In Lumines however a player can wait for the sweep-line to scan terrain before dropping a block that would otherwise be cleared for the possibility of clearing more terrain when the sweep-line scans again.
+While in Tetris a completed row is removed instantly, the marked cells in Lumines is not removed until the sweep-line has scanned the area. This creates interesting strategies with timing which does not exist in Tetris. Waiting before dropping a piece in Tetris does not give the player an advantage except more time to think about what to do next. In Lumines however, a player can choose to wait for the sweep-line to pass before dropping a block. This block may have been cleared rather instantly but now several blocks can be stacked before the sweep-line passes again, possibly clearing more cells in total.
 
-The fact that falling blocks may seperate after being fixed in Lumines implies that there aren't as many ways to build unique terrain as in Tetris. Nevertheless some significant similarities exist between the two games, making the existing research on Tetris a valuable asset when considering the complexity of Lumines.
+The fact that falling blocks may seperate after being fixed in Lumines implies that there aren't as many ways to build unique terrain as in Tetris. Nevertheless some significant similarities exist between the two games, making the existing research on Tetris a valuable asset when considering the computational complexity of Lumines.
