--- a/thesis/phase1.tex
+++ b/thesis/phase1.tex
@@ -247,4 +247,4 @@ consists of black cells in column 4.
 
 \end{enumerate}
 
-At most $8a + 4 \sum Q$ cells have been cleared at the end of this phase.
+Thus at most $8a + 4 \sum Q$ cells have been cleared at the end of this phase.
