--- a/thesis/phase3.tex
+++ b/thesis/phase3.tex
@@ -1,7 +1,7 @@
 \subsubsection{Phase 3}
 \label{phase3}
 
-In this phase the sequence $\left( \mathbf{MB}, \mathbf{MW}, \mathbf{X} \right)$ is generated. According to the reasoning in~\nameref{subsub:phasetwo} the game must either be in an unplayable state or be in a state such that one well is blocked and the other well has the appearance pictured in~\autoref{fig:openclosed}. The well that is not blocked can thus be in one of two possible states. For each case there is exactly one way of placing the block sequence such that this well is not also blocked in the process. Placing the blocks in this way will clear 10 cells regardless of case.
+In this phase the sequence $\left( \mathbf{MB}, \mathbf{MW}, \mathbf{X} \right)$ is generated. According to the reasoning in~\nameref{subsub:phasetwo}, the game must either be in an unplayable state or be in a state such that one well is blocked and the other well has the appearance pictured in~\autoref{fig:openclosed}. The well that is not blocked can thus be in one of two possible states. For each case there is exactly one way of placing the block sequence such that this well is not also blocked in the process. Placing the blocks in this way will clear 10 cells regardless of case.
 
 \begin{figure}[H]
     \centering
@@ -80,4 +80,4 @@ In this phase the sequence $\left( \mathbf{MB}, \mathbf{MW}, \mathbf{X} \right)$
 
 In \autoref{fig:placementc} we see the special case where the player has placed all $\mathbf{H}$ in the same well and then blocked it. This may leave the other (empty) well open, and a problematic situation arises. However, a gameboard of this form does not allow for an optimal clearing of cells. For a proof of this, please see Appendix \ref{specialcasereduction}. Since we know this case to be non-optimal it is ignored in further sections.
 
-At the end of this phase, at most $8a + \sum Q + 10$ cells have been cleared in total.
+Thus at the end of this phase, at most $8a + \sum Q + 10$ cells have been cleared in total.
