--- a/thesis/phase2.tex
+++ b/thesis/phase2.tex
@@ -1,6 +1,6 @@
 \subsubsection{Phase 2}
 \label{subsub:phasetwo}
-In this phase a single $\mathbf{X}_H$ block is generated. From the invariants presented in~\ref{subsub:phaseone} we know that the top of the two wells must be in one of the two states presented in~\autoref{fig:openclosed}. Thus the only non-losing option is to place the $\mathbf{X}_H$ block in such a way that it blocks the well. This placement does not clear any cells.
+In this phase a single $\mathbf{X}_H$ block is generated. From the invariants presented in~\ref{subsub:phaseone} we know that the top of the two wells must be in one of the two states presented in~\autoref{fig:openclosed}. Thus the only non-losing option is to place the $\mathbf{X}_H$ block in such a way that it blocks of the wells. This placement does not clear any cells.
 
 Note that if any well was blocked before this phase, this placement renders both of the wells blocked, making it impossible to clear any more cells during the game.
 
@@ -64,4 +64,4 @@ Note that if any well was blocked before this phase, this placement renders both
     \label{fig:placement}
 \end{figure}
 
-At the end of this phase, at most $8a + 4 \sum Q$ cells have been cleared in total.
+Thus at the end of this phase, at most $8a + 4 \sum Q$ cells have been cleared in total.
