--- a/thesis/phase5.tex
+++ b/thesis/phase5.tex
@@ -1,9 +1,9 @@
 \subsubsection{Phase 5}
-When the open well has collapsed the last phase is entered. In this phase the remaining $\sum M_w - 2$ blocks are placed. The purpose of this phase is to both clear the remaning black cells in column 4, and clear the remaining white cells in column 3 and 4 by making them meet. Let $i = 0$ when block $\sum Q -  \sum M_w + 2$ is about to the placed, let $i = i +1$ when a block has been placed in column 4-5. Then the following invariants hold for the open well $w$:
+When the open well has collapsed the last phase is entered. In this phase the remaining $\sum M_w - 2$ blocks are placed. The purpose of this phase is to both clear the remaning black cells in column 4, and clear the remaining white cells in column 3 and 4 by matching them. Let $i = 0$ when block $\sum Q -  \sum M_w + 2$ is about to the placed, and then let $i = i +1$ when a block has been placed in column 4-5. Then the following invariants hold for the open well $w$:
 
 \begin{enumerate}
 \item Column 5 is empty
-\item The rows in column 1 are alternating white-black (from the bottom). The rows in column 2 are alternating black-white.
+\item The rows in column 1 are alternating white-black. The rows in column 2 are alternating black-white.
 \item In the interval below, the rows in column 3 are white and the rows in column 4 are black:
 \begin{equation*}
     \left[1, \left( K - 2 -i \right)\right]
@@ -27,7 +27,7 @@ When the open well has collapsed the last phase is entered. In this phase the re
 
 \end{enumerate}
 
-This invariants are pictured in~\autoref{fig:invariantsfive}
+These invariants are depicted in~\autoref{fig:invariantsfive}.
 
 \begin{figure}[H]
     \centering
@@ -91,9 +91,9 @@ This invariants are pictured in~\autoref{fig:invariantsfive}
     \label{fig:invariantsfive}
 \end{figure}
 
-Now consider when all blocks has been placed. Then we have $i = \sum M_w -2$ and the gameboard will appear like in~\autoref{fig:afterplace}. The interval in invariant 4 will completely disappear and the terrain will be completely checkered apart from the interval mentioned in invariant 3.
+Now consider when all blocks have been placed. Then we have $i = \sum M_w -2$ and the gameboard will appear like in~\autoref{fig:afterplace}. The interval in invariant 4 will completely disappear and all terrain will be alternating apart from the interval mentioned in invariant 3.
 
-Now only three posibilites exist. We will consider how many cells can be cleared in each instance:
+Now only three possibilities exist. Let's consider how many cells can be cleared in each case.
 
 \begin{enumerate}
 \item $K < \sum M_w$ 
@@ -101,9 +101,10 @@ Now only three posibilites exist. We will consider how many cells can be cleared
     The bottom section is exhausted, therefore all the white cells in column 3 and all the black cells in column 4 are cleared. However, $\Delta = \sum M_w - K$ $\mathbf{LB}$ blocks will be placed which 
     \begin{itemize}
     \item Does not clear any black cells, since there aren't any left to match with in column 4.
-    \item Does not clear any white cells, since there aren't left in column 3 to match those in column 4.
-    Hence we have cleared $8 \left( \sum M_w-2-\Delta \right)$ cells.
+    \item Does not clear any white cells, since there aren't any left in column 3 to match those in column 4.
     \end{itemize}
+
+    Hence we have cleared $8 \left( \sum M_w-2-\Delta \right)$ cells.
 \item $K > \sum M_w$
 
     The bottom section is not exhausted. Therefore $\Delta = K - M_w$ $\mathbf{LB}$ will be placed which clears 4 black cells, but not 4 white cells. Hence we have cleared $8 \left( \sum M_w - 2 -\Delta \right) + 4 \Delta$ cells.
