--- a/thesis/special.tex
+++ b/thesis/special.tex
@@ -1,7 +1,7 @@
 \subsubsection{The special case $K = 1$}
-The only possible solution to the \textit{Subset sum} instance $\langle Q = \{q_1, \ldots, q_a\}, 1 \rangle$ is $S = \{1\}$, since any other possible element of $Q$ is too large. Knowing this, handling this special case is an easy task. A $2a+2 \times 2$ empty gameboard is created. Then any element $q_i$ is transformed into a $\mathbf{X}$ block if $q_i \not = 1$, or into a $\mathbf{MW}$ block if $q_i = 1$. Dropping the blocks and fixing them at the bototm is the only allowed operation in this gameboard. Since the $\mathbf{X}$ blocks will always create alternating terrain, cells are only cleared when a $\mathbf{MW}$ block is placed. In a $\mathbf{MW}$ block is placed, 4 cells are cleared in total, otherwise no cells are cleared during in the game.
+The only possible solution to the \textit{Subset sum} instance $\langle Q = \{q_1, \ldots, q_a\}, 1 \rangle$ is $S = \{1\}$, since any other element of $Q$ will be too large. Knowing this, handling this special case is an easy task. A $2a+2 \times 2$ empty gameboard is created. Then any element $q_i$ is transformed into a $\mathbf{X}$ block if $q_i \not = 1$, or into an $\mathbf{MW}$ block if $q_i = 1$. Dropping the blocks and fixing them at the bottom is evidently the only allowed operation in this gameboard. Since the $\mathbf{X}$ blocks will always create alternating terrain, cells are only cleared when an $\mathbf{MW}$ block is placed. If an $\mathbf{MW}$ block is placed, 4 cells are cleared in total, otherwise no cells are cleared during the game.
 
-Thus there is a trajectory sequence $\phi$ that clears at least 4 cells in $G$, if and only if the \textit{Subset sum} instance $\langle Q, 1 \rangle$ has a solution. The reduction therefore holds for $K = 1$.
+Thus there is a trajectory sequence $\phi$ that clears at least 4 cells in $G$, if and only if the \textit{subset sum} instance $\langle Q, 1 \rangle$ has a solution. The reduction therefore holds for $K = 1$.
 
 \begin{figure}[H]
     \centering
